fix: remove servico duplicado de email